# syncFotos

./: .gitignore  README.md  duplicats.py  fitxers_buits.py  pyproject.toml  sync_fotos.py  sync_fotos_gui.py
.github/workflows/: release.yml
src/syncfotos/: __init__.py  sync_cli.py  sync_gui.py
src/syncfotos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/syncfotos/core/: __init__.py  duplicats_core.py  review_ops.py  sync_core.py  sync_outputs.py
src/syncfotos/tools/: __init__.py  duplicats.py  fitxers_buits.py
src/syncfotos/ui/: __init__.py  duplicats_gui.py  review_gui.py  sync_fotos_gui.py
